syntax = "proto3";

package segmentation.v1;

service SegmentationService {
  rpc AddUserSegment(AddUserSegmentRequest) returns (AddUserSegmentResponse);
}

message AddUserSegmentRequest { UserSegment user_segment = 1; }
message AddUserSegmentResponse {}

message UserSegment {
  string user_id = 1;
  string segment = 2;
}